Add customer information with preferences